--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 data/image/.DS_Store
 data/image/content/.DS_Store
 data/image/content/gasha/.DS_Store
+data/image/content/produce_marathons/.DS_Store
+data/image/content/produce_marathons/cover/.DS_Store
+data/image/content/produce_marathons/logo/.DS_Store
+data/image/content/produce_marathons/album_banner/.DS_Store
