--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ data/image/content/produce_marathons/.DS_Store
 data/image/content/produce_marathons/cover/.DS_Store
 data/image/content/produce_marathons/logo/.DS_Store
 data/image/content/produce_marathons/album_banner/.DS_Store
+data/image/content/produce_place_categories/bg/.DS_Store
+data/image/content/produce_place_categories/.DS_Store
+data/.DS_Store
