.DS_Store 무시하기 (앱등이 멸시)

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,2 @@
 .~lock*
-data/image/.DS_Store
-data/image/content/.DS_Store
-data/image/content/gasha/.DS_Store
-data/image/content/produce_marathons/.DS_Store
-data/image/content/produce_marathons/cover/.DS_Store
-data/image/content/produce_marathons/logo/.DS_Store
-data/image/content/produce_marathons/album_banner/.DS_Store
-data/image/content/produce_place_categories/bg/.DS_Store
-data/image/content/produce_place_categories/.DS_Store
-data/.DS_Store
+.DS_Store
