--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
+.vscode/
+node_modules/
+dist/
+localfont/
+localtext/
+yarn-error.log
+npm-debug.log
+debug.log
 .~lock*
 .DS_Store
+git upload.bat
