--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,22 @@
-if: commit_message =~ /(Upgrade|Trigger|Update|Add|Create|Fix|format)/
+if: commit_message =~ /(never)/
 language: node_js
 node_js:
   - "10"
 cache: yarn
 before_install:
-  - git pull https://github.com/newbiepr/shinymaskr.git master
+  - git pull https://github.com/ShinyGroup/ShinyColors.git master
 jobs:
   include:
+    - stage: trigger downstream
+      if: repo = ShinyGroup/ShinyColors
+      script: |
+        echo "TRAVIS_BRANCH=$TRAVIS_BRANCH TRAVIS_PULL_REQUEST=$TRAVIS_PULL_REQUEST"
+        if [[ ($TRAVIS_BRANCH == master) &&
+              ($TRAVIS_PULL_REQUEST == false) ]] ; then
+          sh ./script/trigger-travis.sh biuuu ShinyColors $TRAVIS_ACCESS_TOKEN
+        fi
     - stage: deploy
-      if: repo = newbiepr/shinymaskr
+      if: repo = biuuu/ShinyColors
       script:
         - yarn travis_deploy
 deploy:
@@ -19,4 +27,4 @@ deploy:
   committer_from_gh: true
   on:
     branch: master
-    repo: newbiepr/shinymaskr
+    repo: biuuu/ShinyColors
